--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">天气</string>
     <string name="title_dashboard">郑维一</string>
     <string name="title_notifications">消息</string>
+    <string name="China">中国</string>
 </resources>
